--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"eslint-plugin-compat": "^6.0.2",
 		"globals": "^16.4.0",
 		"handlebars": "^4.7.8",
+		"http-proxy-middleware": "^3.0.5",
 		"husky": "^8.0.3",
 		"lint-staged": "^16.2.3",
 		"nodemon": "^3.1.10",
